--- a/templates/base.html
+++ b/templates/base.html
@@ -12,8 +12,39 @@
     <title>Your Items</title>
 </head>
 <body>
+<header>
+    <!--navbar-->
+    <nav class="nav-extended teal lighten-3">
+        <div class="nav-wrapper">
+            <a href="#!" class="brand-logo">Digital Pantry</a>
+            <a href="#" data-target="mobile-demo" class="sidenav-trigger right"><i class="fad fa-bars"></i></a>
+            <ul class="right hide-on-med-and-down">
+                <li><a href="{{ url_for('get_items') }}">Home</a></li>
+                <li><a href="#">Profile</a></li>
+                <li><a href="#">My Pantry</a></li>
+                <li><a href="#">Manage Pantry</a></li>
+                <li><a href="#">My Shopping list</a></li>
+                <li><a href="#">Log Out</a></li>
+                <li><a href="#">Log In</a></li>
+                <li><a href="#">Register</a></li>
+            </ul>
+        </div>
+    </nav>
 
-    <h2>How far</h2>
+    <!--Mobile part-->
+    <ul class="sidenav" id="mobile-demo">
+        <li>
+            <h4 class="center-align teal-text text-lighten 1">Digital Pantry</h4>
+        </li>
+        <li><a href="{{ url_for('get_items') }}">Home</a></li>
+        <li><a href="#">Profile</a></li>
+        <li><a href="#">My Pantry</a></li>
+        <li><a href="#">Manage Pantry</a></li>
+        <li><a href="#">My Shopping list</a></li>
+        <li><a href="#">Log Out</a></li>
+        <li><a href="#">Log In</a></li>
+        <li><a href="#">Register</a></li>
+</header>
 
 
     {% block content %}
