--- a/templates/base.html
+++ b/templates/base.html
@@ -26,7 +26,7 @@
                 <li><a href="#">My Shopping list</a></li>
                 <li><a href="#">Log Out</a></li>
                 <li><a href="#">Log In</a></li>
-                <li><a href="#">Register</a></li>
+                <li><a href="{{ url_for('register') }}">Register</a></li>
             </ul>
         </div>
     </nav>
@@ -43,7 +43,7 @@
         <li><a href="#">My Shopping list</a></li>
         <li><a href="#">Log Out</a></li>
         <li><a href="#">Log In</a></li>
-        <li><a href="#">Register</a></li>
+        <li><a href="{{ url_for('register') }}">Register</a></li>
 </header>
 
 
