--- a/templates/login.html
+++ b/templates/login.html
@@ -2,15 +2,15 @@
 {% block content %}
 
 
-<h3 class="center-align">Register Here</h3>
+<h3 class="center-align">Log In</h3>
 
 <div class="row">
-    <form class="col s12 m8 offset-m2" method="POST" action="{{ url_for('register') }}">
+    <form class="col s12 m8 offset-m2" method="POST" action="{{ url_for('login') }}">
         <div class="card-panel">
             <!-- username -->
             <div class="row">
                 <div class="input-field col s12">
-                    <i class="fas fa-user-plus prefix teal-text teal-darken-2"></i>
+                    <i class="fas fa-user-cog prefix teal-text teal-darken-2"></i>
                     <input id="username" name="username" type="text" minlength="3"
                     maxlength="9" pattern="^[a-zA-Z0-9]{3,9}$" class="validate" required>
                     <label for="username">Username</label>
@@ -28,7 +28,7 @@
             <!-- register -->
             <div class="row">
                 <button type="submit" class="col s12 btn-large teal darken-1 text-shadow">
-                    Register <i class="fas fa-sign-in-alt"></i>
+                    Log In<i class="fas fa-sign-in-alt"></i>
                 </button>
             </div>
         </div>
@@ -38,10 +38,11 @@
 <div class="row">
     <div class="col s12">
         <p class="center-align">
-            Current User?
-            <a href="{{ url_for('login') }}" class="teal-text text-darken-4">Log In</a>
+            New?
+            <a href="{{ url_for('register') }}" class="teal-text text-darken-4">Register Now</a>
         </p>
     </div>
 </div>
+
 
 {% endblock %}
