--- a/templates/base.html
+++ b/templates/base.html
@@ -20,13 +20,16 @@
             <a href="#" data-target="mobile-demo" class="sidenav-trigger right"><i class="fad fa-bars"></i></a>
             <ul class="right hide-on-med-and-down">
                 <li><a href="{{ url_for('get_items') }}">Home</a></li>
-                <li><a href="#">Profile</a></li>
+        {% if session.user %}   
+                <li><a href="{{ url_for('profile', username=session['user']) }}">Profile</a></li>
                 <li><a href="#">My Pantry</a></li>
                 <li><a href="#">Manage Pantry</a></li>
                 <li><a href="#">My Shopping list</a></li>
-                <li><a href="#">Log Out</a></li>
+                <li><a href="{{ url_for('logout') }}">Log Out</a></li>
+        {% else %}       
                 <li><a href="{{ url_for('login') }}">Log In</a></li>
                 <li><a href="{{ url_for('register') }}">Register</a></li>
+        {% endif %}
             </ul>
         </div>
     </nav>
@@ -37,17 +40,18 @@
             <h4 class="center-align teal-text text-lighten 1">Digital Pantry</h4>
         </li>
         <li><a href="{{ url_for('get_items') }}">Home</a></li>
-        <li><a href="#">Profile</a></li>
+    {% if session.user %}  
+        <li><a href="{{ url_for('profile', username=session['user']) }}">Profile</a></li>
         <li><a href="#">My Pantry</a></li>
         <li><a href="#">Manage Pantry</a></li>
         <li><a href="#">My Shopping list</a></li>
-        <li><a href="#">Log Out</a></li>
+        <li><a href="{{ url_for('logout') }}">Log Out</a></li>
+    {% else %}  
         <li><a href="{{ url_for('login') }}">Log In</a></li>
         <li><a href="{{ url_for('register') }}">Register</a></li>
+    {% endif %}  
+    </ul>
 </header>
-
-
-
 
 <section>
     <!--what users see when they register. all flash messages-->
