--- a/templates/base.html
+++ b/templates/base.html
@@ -22,7 +22,7 @@
                 <li><a href="{{ url_for('get_items') }}">Home</a></li>
         {% if session.user %}   
                 <li><a href="{{ url_for('profile', username=session['user']) }}">Profile</a></li>
-                <li><a href="#">My Pantry</a></li>
+                <li><a href="{{ url_for('add_item') }}">My Pantry</a></li>
                 <li><a href="#">Manage Pantry</a></li>
                 <li><a href="#">My Shopping list</a></li>
                 <li><a href="{{ url_for('logout') }}">Log Out</a></li>
@@ -42,7 +42,7 @@
         <li><a href="{{ url_for('get_items') }}">Home</a></li>
     {% if session.user %}  
         <li><a href="{{ url_for('profile', username=session['user']) }}">Profile</a></li>
-        <li><a href="#">My Pantry</a></li>
+        <li><a href="{{ url_for('add_item') }}">My Pantry</a></li>
         <li><a href="#">Manage Pantry</a></li>
         <li><a href="#">My Shopping list</a></li>
         <li><a href="{{ url_for('logout') }}">Log Out</a></li>
