--- a/templates/items.html
+++ b/templates/items.html
@@ -1,15 +1,23 @@
 {% extends "base.html" %}
 {% block content %}
 
-        <h1>idsidjosdsdsfs</h1>
+<h1>idsidjosdsdsfs</h1>
 
+<ul class="collapsible popout">
     {% for item in items %}
-        {{ item.item_name }}<br>
-        {{ item.category_name }}<br>
-        {{ item.item_description }}<br>
-        {{ item.purchase_date }}<br>
+    <li>
+        <div class="collapsible-header white-text teal lighten-2 text-shadow">
+            <i class="fas fa-utensils"></i>
+            <strong>{{ item.item_name }}</strong> : {{ item.purchase_date }}
+
+        </div>
+
+        <div class="collapsible-body">
+            <strong>{{ item.category_name }}</strong>
+            <p>{{ item.item_description }}</p>
+            <p>{{ item.purchase_date }}</p>
+        </div>
+    </li>
     {% endfor %}
-
+</ul>
 {% endblock %}
-
-
