--- a/templates/add_item.html
+++ b/templates/add_item.html
@@ -1,29 +1,34 @@
 {% extends "base.html" %}
 {% block content %}
 
-    <h4 class="white-text teal lighten-2 center-align">Record what you have in your pantry</h4>
+    <h4 class="teal-text lighten-2 center-align">Record what you have in your pantry</h4>
+
+    <div class="row card-panel grey lighten-4">
+        <form class="col s12" method="POST" action="">
     <div class="row">
         <form class="col s12" method="POST" action="">
             <div class="row">
                 <div class="input-field col s12">
-                    <i class="fas fa-shopping-basket prefix light-blue-text text-darken-4"></i>
-                    <input id="icon_prefix" type="text" class="validate">
-                    <label for="icon_prefix">Name</label>
+                    <i class="fas fa-shopping-basket prefix teal-text lighten-2"></i>
+                    <input id="item_name" name="item_name" minlength="5" maxlength="50"
+                        type="text" class="validate" required>
+                    <label for="item_name">Item Name</label>
                 </div>
                 <div class="input-field col s12">
-                    <i class="fas fa-calculator prefix light-blue-text text-darken-4"></i>
-                    <input id="icon_telephone" type="text" class="validate">
-                    <label for="icon_telephone">Quantity</label>
+                    <i class="fas fa-clipboard-list prefix teal-text lighten-2"></i>
+                    <textarea id="item_description" name="item_description" minlength="5"
+                        maxlength="200" class="materialize-textarea validate" required></textarea>
+                        <label for="item_description">Item Description</label>
                 </div>
                 <div class="input-field col s12">
-                    <i class="fas fa-box-open prefix light-blue-text text-darken-4"></i>
-                    <input id="icon_telephone" type="text" class="validate">
-                    <label for="icon_telephone">Type</label>
+                    <i class="far fa-calendar-alt prefix teal-text lighten-2"></i>
+                    <input id="purchase_date" name="purchase_date" type="text" class="datepicker validate" required>
+                    <label for="purchase_date">Purchase Date</label>
                 </div>
                 <div class="input-field col s12">
-                    <i class="far fa-calendar-alt prefix light-blue-text text-darken-4"></i>
-                    <input id="icon_telephone" type="text" class="validate">
-                    <label for="icon_telephone">Purchase date</label>
+                    <i class="fas fa-boxes prefix teal-text lighten-2"></i>
+                    <input id="item_quantity" name= "item_quantity" type="text" class="validate" required>
+                    <label for="icon_telephone">Item Quantity</label>
                 </div>
             </div>
         </form>
