--- a/templates/items.html
+++ b/templates/items.html
@@ -16,6 +16,7 @@
             <strong>{{ item.category_name }}</strong>
             <p>{{ item.item_description }}</p>
             <p>{{ item.purchase_date }}</p>
+            <p>{{ item.quantity }}</p>
         </div>
     </li>
     {% endfor %}
