--- a/templates/items.html
+++ b/templates/items.html
@@ -1,15 +1,19 @@
 {% extends "base.html" %}
 {% block content %}
-
 <h1>idsidjosdsdsfs</h1>
 
 <ul class="collapsible popout">
     {% for item in items %}
     <li>
         <div class="collapsible-header white-text teal lighten-2 text-shadow">
-            <i class="fas fa-utensils"></i>
-            <strong>{{ item.item_name }}</strong> : {{ item.purchase_date }}
-
+            <div class="col s3">
+                <i class="fas fa-utensils"></i>
+                <a href="" class="btn-floating btn-small waves-effect waves-light teal-darken-5">Add</a>
+                <a href="" class="btn-floating btn-small waves-effect waves-light teal-darken-4">Edit</a>
+            </div>
+            <div class="col s9">
+                <strong>{{ item.item_name }}</strong> : {{ item.purchase_date }}
+            </div>
         </div>
 
         <div class="collapsible-body">
