--- a/templates/add_item.html
+++ b/templates/add_item.html
@@ -1,10 +1,23 @@
 {% extends "base.html" %}
 {% block content %}
 
-    <h4 class="teal-text lighten-2 center-align">Record what you have in your pantry</h4>
+    <h3 class="teal-text text-lighten-2 center-align">Pantry Items</h3>
 
     <div class="row card-panel grey lighten-4">
         <form class="col s12" method="POST" action="{{ url_for('add_item') }}">
+            <div class="row">
+				<div class="input-field col s12">
+                    <i class="fas fa-folder-open prefix teal-text lighten-2"></i>
+					<select id="category_name" name="category_name" class="validate" required>
+                        <option value="" disabled selected>Choose Category</option>
+                        {% for category in categories %}
+                            <option value="{{ category.category_name }}">{{ category.category_name }}</option>
+                        {% endfor %}
+                    </select>
+					<label for="category_name">Item Category</label>
+				</div>
+			</div>
+
     <div class="row">
         <form class="col s12" method="POST" action="">
             <div class="row">
@@ -15,7 +28,7 @@
                     <label for="item_name">Item Name</label>
                 </div>
                 <div class="input-field col s12">
-                    <i class="fas fa-clipboard-list prefix teal-text lighten-2"></i>
+                    <i class="fas fa-pencil-alt prefix teal-text lighten-2"></i>
                     <textarea id="item_description" name="item_description" minlength="3"
                         maxlength="200" class="materialize-textarea validate" required></textarea>
                         <label for="item_description">Item Description</label>
