--- a/templates/items.html
+++ b/templates/items.html
@@ -1,11 +1,12 @@
 {% extends "base.html" %}
 {% block content %}
-<h1>idsidjosdsdsfs</h1>
+<h3 class="light-blue-text text-darken-4 center-align">Items currently in your pantry</h3>
 
 <ul class="collapsible popout">
     {% for item in items %}
     <li>
         <div class="collapsible-header white-text teal lighten-2 text-shadow">
+            <i class="fas fa-caret-down"></i>
             <div class="col s3">
                 <i class="fas fa-utensils"></i>
                 <a href="" class="btn-floating btn-small waves-effect waves-light teal-darken-5">Add</a>
@@ -18,9 +19,10 @@
 
         <div class="collapsible-body">
             <strong>{{ item.category_name }}</strong>
-            <p>{{ item.item_description }}</p>
-            <p>{{ item.purchase_date }}</p>
-            <p>{{ item.quantity }}</p>
+            <p>Item description : {{ item.item_description }}</p>
+            <p>Date of purchase : {{ item.purchase_date }}</p>
+            <p>Quantity : {{ item.item_quantity }}</p>
+            <p><em>Added by: {{ item.created_by }}</em></p>
         </div>
     </li>
     {% endfor %}
