--- a/templates/add_item.html
+++ b/templates/add_item.html
@@ -1,8 +1,8 @@
 {% extends "base.html" %}
 {% block content %}
 
-    <h3 class="teal-text text-lighten-2 center-align">Pantry Items</h3>
-
+    <h3 class="teal-text text-lighten-2 center-align">Add Item</h3>
+   
     <div class="row card-panel grey lighten-4">
         <form class="col s12" method="POST" action="{{ url_for('add_item') }}">
             <div class="row">
