--- a/templates/edit_item.html
+++ b/templates/edit_item.html
@@ -1,22 +1,35 @@
 {% extends "base.html" %}
 {% block content %}
 
-    <h4 class="teal-text lighten-2 center-align">Record what you have in your pantry</h4>
-
+    <h3 class="teal-text text-lighten-2 center-align">Edit Item</h3>
+   
     <div class="row card-panel grey lighten-4">
-        <form class="col s12" method="POST" action="">
+        <form class="col s12" method="POST" action="{{ url_for('edit_item', item_id=item._id) }}">
+            <div class="row">
+				<div class="input-field col s12">
+                    <i class="fas fa-folder-open prefix teal-text lighten-2"></i>
+					<select id="category_name" name="category_name" class="validate" required>
+                        <option value="" disabled selected>Choose Category</option>
+                        {% for category in categories %}
+                            <option value="{{ category.category_name }}">{{ category.category_name }}</option>
+                        {% endfor %}
+                    </select>
+					<label for="category_name">Item Category</label>
+				</div>
+			</div>
+
     <div class="row">
         <form class="col s12" method="POST" action="">
             <div class="row">
                 <div class="input-field col s12">
                     <i class="fas fa-shopping-basket prefix teal-text lighten-2"></i>
-                    <input id="item_name" name="item_name" minlength="5" maxlength="50"
+                    <input id="item_name" name="item_name" minlength="3" maxlength="50"
                         type="text" class="validate" required>
                     <label for="item_name">Item Name</label>
                 </div>
                 <div class="input-field col s12">
-                    <i class="fas fa-clipboard-list prefix teal-text lighten-2"></i>
-                    <textarea id="item_description" name="item_description" minlength="5"
+                    <i class="fas fa-pencil-alt prefix teal-text lighten-2"></i>
+                    <textarea id="item_description" name="item_description" minlength="3"
                         maxlength="200" class="materialize-textarea validate" required></textarea>
                         <label for="item_description">Item Description</label>
                 </div>
@@ -29,6 +42,15 @@
                     <i class="fas fa-boxes prefix teal-text lighten-2"></i>
                     <input id="item_quantity" name= "item_quantity" type="text" class="validate" required>
                     <label for="icon_telephone">Item Quantity</label>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col s12 center-align">
+                    <button type="submit" class="waves-effect waves-light btn-large text-shadow">
+                        Edit Item <i class="fas fa-edit"></i>
+
+                        
+                    </button>
                 </div>
             </div>
         </form>
