--- a/templates/edit_item.html
+++ b/templates/edit_item.html
@@ -9,14 +9,20 @@
 				<div class="input-field col s12">
                     <i class="fas fa-folder-open prefix teal-text lighten-2"></i>
 					<select id="category_name" name="category_name" class="validate" required>
-                        <option value="" disabled selected>Choose Category</option>
+                        <option value="" disabled >Choose Category</option>
                         {% for category in categories %}
+                            {% if category.category_name == item.category_name %}
+                            <option value="{{ category.category_name }}" selected>{{ category.category_name }}</option>
+                            {% else %}
                             <option value="{{ category.category_name }}">{{ category.category_name }}</option>
+                            {% endif %}
                         {% endfor %}
                     </select>
 					<label for="category_name">Item Category</label>
 				</div>
 			</div>
+
+
 
     <div class="row">
         <form class="col s12" method="POST" action="">
@@ -24,30 +30,36 @@
                 <div class="input-field col s12">
                     <i class="fas fa-shopping-basket prefix teal-text lighten-2"></i>
                     <input id="item_name" name="item_name" minlength="3" maxlength="50"
-                        type="text" class="validate" required>
+                    value="{{ item.item_name }}" type="text" class="validate" required>
                     <label for="item_name">Item Name</label>
                 </div>
                 <div class="input-field col s12">
                     <i class="fas fa-pencil-alt prefix teal-text lighten-2"></i>
                     <textarea id="item_description" name="item_description" minlength="3"
-                        maxlength="200" class="materialize-textarea validate" required></textarea>
+                        maxlength="200" class="materialize-textarea validate" required>
+                        {{- item.item_description -}}
+                    </textarea>
                         <label for="item_description">Item Description</label>
                 </div>
                 <div class="input-field col s12">
                     <i class="far fa-calendar-alt prefix teal-text lighten-2"></i>
-                    <input id="purchase_date" name="purchase_date" type="text" class="datepicker validate" required>
+                    <input id="purchase_date" name="purchase_date" type="text"  value="{{ item.purchase_date }}"class="datepicker validate" required>
                     <label for="purchase_date">Purchase Date</label>
                 </div>
                 <div class="input-field col s12">
                     <i class="fas fa-boxes prefix teal-text lighten-2"></i>
-                    <input id="item_quantity" name= "item_quantity" type="text" class="validate" required>
-                    <label for="icon_telephone">Item Quantity</label>
+                    <input id="item_quantity" name= "item_quantity" type="text" value="{{ item.item_quantity }}"class="validate" required>
+                    <label for="item_quantity">Item Quantity</label>
                 </div>
             </div>
             <div class="row">
                 <div class="col s12 center-align">
+                    <a href="{{ url_for('get_items') }}" class="btn-large red text-shadow">
+                        Cancel <i class="fas fa-times-circle right"></i>
+                    </a>    
                     <button type="submit" class="waves-effect waves-light btn-large text-shadow">
                         Edit Item <i class="fas fa-edit"></i>
+                    
 
                         
                     </button>
