--- a/templates/items.html
+++ b/templates/items.html
@@ -1,6 +1,9 @@
 {% extends "base.html" %}
 {% block content %}
-<h3 class="teal-text text-lighten-2 center-align">Your Pantry Overview</h3>
+
+<h3 class="teal-text text-lighten-2 center-align"> 
+   Your Pantry
+</h3>
 
 <ul class="collapsible popout">
     {% for item in items %}
@@ -9,8 +12,10 @@
             <i class="fas fa-caret-down"></i>
             <div class="col s3">
                 <i class="fas fa-utensils"></i>
-                <a href="" class="btn-floating btn-small waves-effect waves-light teal-darken-5">Done</a>
-                <a href="{{ url_for('edit_item', item_id=item._id) }}" class="btn-floating btn-small waves-effect waves-light teal-darken-4">Edit</a>
+                {% if session.user|lower == item.created_by|lower %}
+                    <a href="{{ url_for('delete_item', item_id=item._id) }}" class="btn-floating btn-small waves-effect waves-light teal-darken-5">Done</a>
+                    <a href="{{ url_for('edit_item', item_id=item._id) }}" class="btn-floating btn-small waves-effect waves-light teal-darken-4">Edit</a>
+                {% endif %}
             </div>
             <div class="col s9">
                 <strong>{{ item.item_name }}</strong> : {{ item.purchase_date }}
