--- a/templates/base.html
+++ b/templates/base.html
@@ -23,7 +23,9 @@
         {% if session.user %}   
                 <li><a href="{{ url_for('profile', username=session['user']) }}">Profile</a></li>
                 <li><a href="{{ url_for('add_item') }}">My Pantry</a></li>
-                <li><a href="#">Manage Pantry</a></li>
+                {% if session.user|lower == "admin"|lower %}
+                <li><a href="{{ url_for('get_categories') }}">Manage Pantry</a></li>
+                {% endif %}
                 <li><a href="#">My Shopping list</a></li>
                 <li><a href="{{ url_for('logout') }}">Log Out</a></li>
         {% else %}       
@@ -43,7 +45,9 @@
     {% if session.user %}  
         <li><a href="{{ url_for('profile', username=session['user']) }}">Profile</a></li>
         <li><a href="{{ url_for('add_item') }}">My Pantry</a></li>
-        <li><a href="#">Manage Pantry</a></li>
+        {% if session.user|lower == "admin"|lower %}
+        <li><a href="{{ url_for('get_categories') }}">Manage Pantry</a></li>
+        {% endif %}
         <li><a href="#">My Shopping list</a></li>
         <li><a href="{{ url_for('logout') }}">Log Out</a></li>
     {% else %}  
