--- a/templates/base.html
+++ b/templates/base.html
@@ -26,7 +26,8 @@
                 {% if session.user|lower == "admin"|lower %}
                 <li><a href="{{ url_for('get_categories') }}">Manage Pantry</a></li>
                 {% endif %}
-                <li><a href="#">My Shopping list</a></li>
+
+                <li><a href="{{ url_for('grocerylist') }}">Grocery list</a></li>
                 <li><a href="{{ url_for('logout') }}">Log Out</a></li>
         {% else %}       
                 <li><a href="{{ url_for('login') }}">Log In</a></li>
@@ -48,7 +49,7 @@
         {% if session.user|lower == "admin"|lower %}
         <li><a href="{{ url_for('get_categories') }}">Manage Pantry</a></li>
         {% endif %}
-        <li><a href="#">My Shopping list</a></li>
+        <li><a href="{{ url_for('grocerylist') }}">Grocery list</a></li>
         <li><a href="{{ url_for('logout') }}">Log Out</a></li>
     {% else %}  
         <li><a href="{{ url_for('login') }}">Log In</a></li>
