--- a/templates/base.html
+++ b/templates/base.html
@@ -23,7 +23,7 @@
         {% if session.user %}   
                 <li><a href="{{ url_for('profile', username=session['user']) }}">Profile</a></li>
                 <li><a href="{{ url_for('add_item') }}">My Pantry</a></li>
-                {% if session.user|lower == "admin"|lower %}
+                {% if session.user|lower == "mum"|lower %}
                 <li><a href="{{ url_for('get_categories') }}">Manage Pantry</a></li>
                 {% endif %}
 
