--- a/templates/grocerylist.html
+++ b/templates/grocerylist.html
@@ -16,7 +16,18 @@
             <div id="all_items"></div>
           </div>
         </div>
-      </main>
+
+        <div class="row">
+            <div class="col s12 center-align">
+                <a href="{{ url_for('grocerylist') }}" class="btn-large red text-shadow">
+                    Cancel <i class="fas fa-times-circle right"></i>
+                </a>
+                
+                
+            </div>
+        </div>
+
+    </main>
       
       
 {% endblock %}
