--- a/static/css/style.css
+++ b/static/css/style.css
@@ -12,3 +12,17 @@
     line-height: 2;
 }
 
+h1, h2, h3, h4, h5, p{
+    text-align:center;
+    color: teal;
+    background:none;
+}
+
+.flashes h4 {
+    line-height: 2;
+    background: none;
+}
+   
+.text-shadow {
+    text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5);
+}
