--- a/templates/add_item.html
+++ b/templates/add_item.html
@@ -1,7 +1,14 @@
 {% extends "base.html" %}
 {% block content %}
 
-    <h3 class="teal-text text-lighten-2 center-align">Add Item</h3>
+<div class="row">
+    <div class="col s12 m8 offset-m2">
+        <div class="card-panel">
+            <h3 class="center-align teal-text text-darken-2">
+POPULATE YOUR PANTRY           </h3>
+        </div>
+    </div>
+</div>
    
     <div class="row card-panel grey lighten-4">
         <form class="col s12" method="POST" action="{{ url_for('add_item') }}">
