--- a/templates/base.html
+++ b/templates/base.html
@@ -23,10 +23,7 @@
         {% if session.user %}   
                 <li><a href="{{ url_for('profile', username=session['user']) }}">Profile</a></li>
                 <li><a href="{{ url_for('add_item') }}">My Pantry</a></li>
-                {% if session.user|lower == "mum"|lower %}
                 <li><a href="{{ url_for('get_categories') }}">Manage Pantry</a></li>
-                {% endif %}
-
                 <li><a href="{{ url_for('grocerylist') }}">Grocery list</a></li>
                 <li><a href="{{ url_for('logout') }}">Log Out</a></li>
         {% else %}       
@@ -46,9 +43,7 @@
     {% if session.user %}  
         <li><a href="{{ url_for('profile', username=session['user']) }}">Profile</a></li>
         <li><a href="{{ url_for('add_item') }}">My Pantry</a></li>
-        {% if session.user|lower == "admin"|lower %}
         <li><a href="{{ url_for('get_categories') }}">Manage Pantry</a></li>
-        {% endif %}
         <li><a href="{{ url_for('grocerylist') }}">Grocery list</a></li>
         <li><a href="{{ url_for('logout') }}">Log Out</a></li>
     {% else %}  
@@ -64,7 +59,7 @@
     {% if messages %}
     {% for message in messages %}
     <div class="row flashes">
-        <h4 class=" teal lighten-2 center-align">{{ message }}</h4>
+        <h4 class=" teal-text lighten-2 center-align">{{ message }}</h4>
     </div>
     {% endfor %}
     {% endif %}
@@ -75,8 +70,6 @@
     {% block content %}
     {% endblock %}
 </main>
-
-
 
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"
     integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
