--- a/templates/grocerylist.html
+++ b/templates/grocerylist.html
@@ -1,33 +1,45 @@
 {% extends "base.html" %}
 {% block content %}
-    
 
 
-    <main>
-        <div class="container">
-          <div id="groceries">
+<main>
+    <div class="container">
+        <div id="groceries">
             <div id="title">
-              <h1>Grocery List</h1>
+                <div class="row">
+                    <div class="col s12 m8 offset-m2">
+                        <div class="card-panel">
+                            <h3 class="center-align teal-text text-darken-2">
+              CREATE A GROCERY LIST           </h3>
+                        </div>
+                    </div>
+                </div>
+                <p>Create your grocery list here. Click on item to strike through as you shop</p>
             </div>
             <div id="input">
-              <i id="pencil" class="fas fa-pencil-alt"></i>
-              <input id="user_input">
+                <i id="pencil" class="fas fa-pencil-alt"></i>
+                <input id="user_input">
             </div>
             <div id="all_items"></div>
-          </div>
+        </div>
+    </div>
+
+    <br>
+    <div class="row">
+        <div class="col s6 center-align">
+            <a href="{{ url_for('grocerylist') }}" class="btn-large teal text-shadow">
+                Cancel <i class="fas fa-times-circle right"></i>
+            </a>
         </div>
 
-        <div class="row">
-            <div class="col s12 center-align">
-                <a href="{{ url_for('grocerylist') }}" class="btn-large red text-shadow">
-                    Cancel <i class="fas fa-times-circle right"></i>
-                </a>
-                
-                
-            </div>
+        <div class="col s6 center-align">
+            <a href="{{ url_for('add_item') }}" class="btn-large teal text-shadow">
+               Home <i class="fas fa-plus-circle right"></i>
+            </a>
         </div>
+    </div>
 
-    </main>
-      
-      
+</main>
+
+
 {% endblock %}
