--- a/templates/items.html
+++ b/templates/items.html
@@ -1,20 +1,24 @@
 {% extends "base.html" %}
 {% block content %}
-
-<h3 class="teal-text text-lighten-2 center-align"> 
-   Your Pantry
-</h3>
+<div class="row">
+    <div class="col s12 m8 offset-m2">
+        <div class="card-panel">
+            <h3 class="center-align teal-text text-darken-2">
+YOUR PANTRY           </h3>
+        </div>
+    </div>
+</div>
 <div class="row card-panel grey lighten-5">
     <form action="{{ url_for('search') }}" method="post" class="col s12">
         <div class="row valign-wrapper center-align">
             <div class="input-field col s12 m8">
-                <i class="fas fa-search prefix light-blue-text text-darken-4"></i>
+                <i class="fas fa-search prefix teal-text text-lighten-2 "></i>
                 <input type="text" name="query" id="query" minlength="3" class="validate" required>
                 <label for="query">Search Items</label>
             </div>
             <div class="col s12 m4">
                 <a href="{{ url_for('get_items') }}" class="red btn text-shadow">Reset</a>
-                <button type="submit" class="light-blue darken-1 btn text-shadow">
+                <button type="submit" class="teal lighten-2 btn text-shadow">
                     <i class="fas fa-search left"></i> Search
                 </button>
             </div>
