--- a/templates/manage_pantry.html
+++ b/templates/manage_pantry.html
@@ -1,12 +1,21 @@
 {% extends "base.html" %}
 {% block content %}
 
-    <h3 class="teal text lighten-3 center-align">Manage Pantry</h3>
+<div class="row">
+    <div class="col s12 m8 offset-m2">
+        <div class="card-panel">
+            <h3 class="center-align teal-text text-darken-2">
+MANAGE PANTRY            </h3>
+        </div>
+    </div>
+</div>
+    
+
 
 
     <div class="row">
         <div class="col s12 center-align">
-            <a href="{{ url_for('add_category') }}" class="btn-large light-blue darken-2 text-shadow">
+            <a href="{{ url_for('add_category') }}" class="btn-large teal-lighten-2 text-shadow">
                 Add category <i class="fas fa-plus-square right"></i>
             </a>
         </div>
