--- a/templates/profile.html
+++ b/templates/profile.html
@@ -13,25 +13,25 @@
     
         <h3>Dear {{ username }},</h3>
 
-        <p>Welcome to digital pantry, a website built with love to help ypu track what you have in your pantry including your refrigerator.
-        </p>
-        
-       
-        <div class="row featurette">
-            <div class="col-md-7">
-                <h3>Mrs Rokus</h3>
-                    <p>
-                        Mrs rokus is the pioneer of jeun by rokus. In the year 1956, she decided to o be the pioneer of
-                        high quality, affordable and authentic African cuisine, promoting the true culture of Africa.
-                        Jeun By rokus's personality is reflected in
-                        our tone of voice, as well as our customer facing
-                        interactions
-                    </p>
-                </div>
-                <div class="col-md-5">
-                    <img src="https://www.ft.com/__origami/service/image/v2/images/raw/http%3A%2F%2Fcom.ft.imagepublish.upp-prod-eu.s3.amazonaws.com%2Fffe83790-09ff-11ea-8fb7-8fcec0c3b0f9?fit=scale-down&source=next&width=700" alt="">
-                </div>
+        <h5>Welcome to digital pantry, a website built with love to help you track what you have in your pantry including your refrigerator.<br>
+            Please begin by adding an item or creating a shopping list.<br>
+            Remember to check with mum because mum knows best.
+        </h5>
+        <br>
+    
+        <div class="row">
+            <div class="col s6 center-align">
+                <a href="{{ url_for('grocerylist') }}" class="btn-large teal text-shadow">
+                  shopping list <i class="fas fa-plus-circle right"></i>
+                </a>
             </div>
+            <div class="col s6 center-align">
+                <a href="{{ url_for('add_item') }}" class="btn-large teal text-shadow">
+                   Add Item <i class="fas fa-plus-circle right"></i>
+                </a>
+            </div>
+
+        </div>
 
 
 {% endblock %}
