--- a/templates/add_item.html
+++ b/templates/add_item.html
@@ -5,67 +5,67 @@
     <div class="col s12 m8 offset-m2">
         <div class="card-panel">
             <h3 class="center-align teal-text text-darken-2">
-POPULATE YOUR PANTRY           </h3>
+                POPULATE YOUR PANTRY </h3>
         </div>
     </div>
 </div>
-   
-    <div class="row card-panel grey lighten-4">
-        <form class="col s12" method="POST" action="{{ url_for('add_item') }}">
-            <div class="row">
-				<div class="input-field col s12">
-                    <i class="fas fa-folder-open prefix teal-text lighten-2"></i>
-					<select id="category_name" name="category_name" class="validate" required>
-                        <option value="" disabled selected>Choose Category</option>
-                        {% for category in categories %}
-                            <option value="{{ category.category_name }}">{{ category.category_name }}</option>
-                        {% endfor %}
-                    </select>
-					<label for="category_name">Item Category</label>
-				</div>
-			</div>
 
-    <div class="row">
-        <form class="col s12" method="POST" action="">
-            <div class="row">
-                <div class="input-field col s12">
-                    <i class="fas fa-shopping-basket prefix teal-text lighten-2"></i>
-                    <input id="item_name" name="item_name" minlength="3" maxlength="50"
-                        type="text" class="validate" required>
-                    <label for="item_name">Item Name</label>
-                </div>
-                <div class="input-field col s12">
-                    <i class="fas fa-pencil-alt prefix teal-text lighten-2"></i>
-                    <textarea id="item_description" name="item_description" minlength="3"
-                        maxlength="200" class="materialize-textarea validate" required></textarea>
+<div class="row card-panel grey lighten-4">
+    <form class="col s12" method="POST" action="{{ url_for('add_item') }}">
+        <div class="row">
+            <div class="input-field col s12">
+                <i class="fas fa-folder-open prefix teal-text lighten-2"></i>
+                <select id="category_name" name="category_name" class="validate" required>
+                    <option value="" disabled selected>Choose Category</option>
+                    {% for category in categories %}
+                    <option value="{{ category.category_name }}">{{ category.category_name }}</option>
+                    {% endfor %}
+                </select>
+                <label for="category_name">Item Category</label>
+            </div>
+        </div>
+
+        <div class="row">
+            <form class="col s12" method="POST" action="">
+                <div class="row">
+                    <div class="input-field col s12">
+                        <i class="fas fa-shopping-basket prefix teal-text lighten-2"></i>
+                        <input id="item_name" name="item_name" minlength="3" maxlength="50" type="text" class="validate"
+                            required>
+                        <label for="item_name">Item Name</label>
+                    </div>
+                    <div class="input-field col s12">
+                        <i class="fas fa-pencil-alt prefix teal-text lighten-2"></i>
+                        <textarea id="item_description" name="item_description" minlength="3" maxlength="200"
+                            class="materialize-textarea validate" required></textarea>
                         <label for="item_description">Item Description</label>
+                    </div>
+                    <div class="input-field col s12">
+                        <i class="far fa-calendar-alt prefix teal-text lighten-2"></i>
+                        <input id="purchase_date" name="purchase_date" type="text" class="datepicker validate" required>
+                        <label for="purchase_date">Purchase Date</label>
+                    </div>
+                    <div class="input-field col s12">
+                        <i class="fas fa-boxes prefix teal-text lighten-2"></i>
+                        <input id="item_quantity" name="item_quantity" type="text" class="validate" required>
+                        <label for="icon_telephone">Item Quantity</label>
+                    </div>
                 </div>
-                <div class="input-field col s12">
-                    <i class="far fa-calendar-alt prefix teal-text lighten-2"></i>
-                    <input id="purchase_date" name="purchase_date" type="text" class="datepicker validate" required>
-                    <label for="purchase_date">Purchase Date</label>
+                <div class="row">
+                    <div class="col s12 center-align">
+                        <button type="submit" class="waves-effect waves-light btn-large text-shadow">
+                            Add Item <i class="fas fa-plus-square right"></i>
+
+
+                        </button>
+                    </div>
                 </div>
-                <div class="input-field col s12">
-                    <i class="fas fa-boxes prefix teal-text lighten-2"></i>
-                    <input id="item_quantity" name= "item_quantity" type="text" class="validate" required>
-                    <label for="icon_telephone">Item Quantity</label>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col s12 center-align">
-                    <button type="submit" class="waves-effect waves-light btn-large text-shadow">
-                        Add Item <i class="fas fa-plus-square right"></i>
-
-                        
-                    </button>
-                </div>
-            </div>
-        </form>
-    </div>
-
-    
+            </form>
+        </div>
 
 
 
 
-{% endblock %}
+
+
+        {% endblock %}
