--- a/templates/base.html
+++ b/templates/base.html
@@ -1,82 +1,87 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css"
-        integrity="sha512-xA6Hp6oezhjd6LiLZynuukm80f8BoZ3OpcEYaqKoCV3HKQDrYjDE1Gu8ocxgxoXmwmSzM4iqPvCsOkQNiu41GA==" crossorigin="anonymous" type="text/css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css" type="text/css">
+        integrity="sha512-xA6Hp6oezhjd6LiLZynuukm80f8BoZ3OpcEYaqKoCV3HKQDrYjDE1Gu8ocxgxoXmwmSzM4iqPvCsOkQNiu41GA=="
+        crossorigin="anonymous" type="text/css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"
+        type="text/css">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}" type="text/css">
     {% block styles %}
     {% endblock %}
     <title>Your Items</title>
 </head>
+
 <body>
-<header>
-    <!--navbar-->
-    <nav class="nav-extended teal lighten-3">
-        <div class="nav-wrapper">
-            <a href="#!" class="brand-logo">Digital Pantry</a>
-            <a href="#" data-target="mobile-demo" class="sidenav-trigger right"><i class="fad fa-bars"></i></a>
-            <ul class="right hide-on-med-and-down">
-                <li><a href="{{ url_for('get_items') }}">Home</a></li>
-        {% if session.user %}   
-                <li><a href="{{ url_for('profile', username=session['user']) }}">Profile</a></li>
-                <li><a href="{{ url_for('add_item') }}">My Pantry</a></li>
-                <li><a href="{{ url_for('get_categories') }}">Manage Pantry</a></li>
-                <li><a href="{{ url_for('grocerylist') }}">Grocery list</a></li>
-                <li><a href="{{ url_for('logout') }}">Log Out</a></li>
-        {% else %}       
-                <li><a href="{{ url_for('login') }}">Log In</a></li>
-                <li><a href="{{ url_for('register') }}">Register</a></li>
-        {% endif %}
-            </ul>
+    <header>
+        <!--navbar-->
+        <nav class="nav-extended teal lighten-3">
+            <div class="nav-wrapper">
+                <a href="#!" class="brand-logo">Digital Pantry</a>
+                <a href="#" data-target="mobile-demo" class="sidenav-trigger right"><i class="fad fa-bars"></i></a>
+                <ul class="right hide-on-med-and-down">
+                    <li><a href="{{ url_for('get_items') }}">Home</a></li>
+                    {% if session.user %}
+                    <li><a href="{{ url_for('profile', username=session['user']) }}">Profile</a></li>
+                    <li><a href="{{ url_for('add_item') }}">My Pantry</a></li>
+                    <li><a href="{{ url_for('get_categories') }}">Manage Pantry</a></li>
+                    <li><a href="{{ url_for('grocerylist') }}">Grocery list</a></li>
+                    <li><a href="{{ url_for('logout') }}">Log Out</a></li>
+                    {% else %}
+                    <li><a href="{{ url_for('login') }}">Log In</a></li>
+                    <li><a href="{{ url_for('register') }}">Register</a></li>
+                    {% endif %}
+                </ul>
+            </div>
+        </nav>
+
+        <!--Mobile part-->
+        <ul class="sidenav" id="mobile-demo">
+            <li>
+                <h4 class="center-align teal-text text-lighten 1">Digital Pantry</h4>
+            </li>
+            <li><a href="{{ url_for('get_items') }}">Home</a></li>
+            {% if session.user %}
+            <li><a href="{{ url_for('profile', username=session['user']) }}">Profile</a></li>
+            <li><a href="{{ url_for('add_item') }}">My Pantry</a></li>
+            <li><a href="{{ url_for('get_categories') }}">Manage Pantry</a></li>
+            <li><a href="{{ url_for('grocerylist') }}">Grocery list</a></li>
+            <li><a href="{{ url_for('logout') }}">Log Out</a></li>
+            {% else %}
+            <li><a href="{{ url_for('login') }}">Log In</a></li>
+            <li><a href="{{ url_for('register') }}">Register</a></li>
+            {% endif %}
+        </ul>
+    </header>
+
+    <section>
+        <!--what users see when they register. all flash messages-->
+        {% with messages = get_flashed_messages() %}
+        {% if messages %}
+        {% for message in messages %}
+        <div class="row flashes">
+            <h4 class=" teal-text lighten-2 center-align">{{ message }}</h4>
         </div>
-    </nav>
+        {% endfor %}
+        {% endif %}
+        {% endwith %}
+    </section>
 
-    <!--Mobile part-->
-    <ul class="sidenav" id="mobile-demo">
-        <li>
-            <h4 class="center-align teal-text text-lighten 1">Digital Pantry</h4>
-        </li>
-        <li><a href="{{ url_for('get_items') }}">Home</a></li>
-    {% if session.user %}  
-        <li><a href="{{ url_for('profile', username=session['user']) }}">Profile</a></li>
-        <li><a href="{{ url_for('add_item') }}">My Pantry</a></li>
-        <li><a href="{{ url_for('get_categories') }}">Manage Pantry</a></li>
-        <li><a href="{{ url_for('grocerylist') }}">Grocery list</a></li>
-        <li><a href="{{ url_for('logout') }}">Log Out</a></li>
-    {% else %}  
-        <li><a href="{{ url_for('login') }}">Log In</a></li>
-        <li><a href="{{ url_for('register') }}">Register</a></li>
-    {% endif %}  
-    </ul>
-</header>
-
-<section>
-    <!--what users see when they register. all flash messages-->
-    {% with messages = get_flashed_messages() %}
-    {% if messages %}
-    {% for message in messages %}
-    <div class="row flashes">
-        <h4 class=" teal-text lighten-2 center-align">{{ message }}</h4>
-    </div>
-    {% endfor %}
-    {% endif %}
-    {% endwith %}
-</section>
-
-<main class="container">
-    {% block content %}
-    {% endblock %}
-</main>
+    <main class="container">
+        {% block content %}
+        {% endblock %}
+    </main>
 
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"
-    integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+        integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script src="{{ url_for('static', filename='js/script.js') }}"></script>
 
     {% block scripts %}
     {% endblock %}
 </body>
+
 </html>
