--- a/templates/manage_pantry.html
+++ b/templates/manage_pantry.html
@@ -5,36 +5,37 @@
     <div class="col s12 m8 offset-m2">
         <div class="card-panel">
             <h3 class="center-align teal-text text-darken-2">
-MANAGE PANTRY            </h3>
+                MANAGE PANTRY </h3>
         </div>
     </div>
 </div>
-    
 
 
 
-    <div class="row">
-        <div class="col s12 center-align">
-            <a href="{{ url_for('add_category') }}" class="btn-large teal-lighten-2 text-shadow">
-                Add category <i class="fas fa-plus-square right"></i>
-            </a>
+
+<div class="row">
+    <div class="col s12 center-align">
+        <a href="{{ url_for('add_category') }}" class="btn-large teal-lighten-2 text-shadow">
+            Add category <i class="fas fa-plus-square right"></i>
+        </a>
+    </div>
+</div>
+
+<div class="row">
+    {% for category in categories %}
+    <div class="col s12 m3">
+        <div class="card teal darken-1 text-shadow center-align">
+            <div class="card-content white-text">
+                <span class="card-title">{{ category.category_name }}</span>
+            </div>
+            <div class="card-action">
+                <a href="{{ url_for('edit_category', category_id=category._id) }}" class="btn green accent-4">Edit</a>
+                <a href="{{ url_for('delete_category', category_id=category._id) }}"
+                    class="btn light-blue lighten-1">Del</a>
+            </div>
         </div>
     </div>
-
-    <div class="row">
-        {% for category in categories %}
-            <div class="col s12 m3">
-                <div class="card teal darken-1 text-shadow center-align">
-                    <div class="card-content white-text">
-                        <span class="card-title">{{ category.category_name }}</span>
-                    </div>
-                    <div class="card-action">
-                        <a href="{{ url_for('edit_category', category_id=category._id) }}" class="btn green accent-4">Edit</a>
-                        <a href="{{ url_for('delete_category', category_id=category._id) }}"  class="btn light-blue lighten-1">Del</a>
-                    </div>
-                </div>
-            </div>
-        {% endfor %}
-    </div>
+    {% endfor %}
+</div>
 
 {% endblock %}
