--- a/templates/profile.html
+++ b/templates/profile.html
@@ -10,28 +10,29 @@
         </div>
     </div>
 </div>
-    
-        <h3>Dear {{ username }},</h3>
 
-        <h5>Welcome to digital pantry, a website built with love to help you track what you have in your pantry including your refrigerator.<br>
-            Please begin by adding an item or creating a shopping list.<br>
-            Remember to check with mum because mum knows best.
-        </h5>
-        <br>
-    
-        <div class="row">
-            <div class="col s6 center-align">
-                <a href="{{ url_for('grocerylist') }}" class="btn-large teal text-shadow">
-                  shopping list <i class="fas fa-plus-circle right"></i>
-                </a>
-            </div>
-            <div class="col s6 center-align">
-                <a href="{{ url_for('add_item') }}" class="btn-large teal text-shadow">
-                   Add Item <i class="fas fa-plus-circle right"></i>
-                </a>
-            </div>
+<h3>Dear {{ username }},</h3>
 
-        </div>
+<h5>Welcome to digital pantry, a website built with love to help you track what you have in your pantry including your
+    refrigerator.<br>
+    Please begin by adding an item or creating a shopping list.<br>
+    Remember to check with mum because mum knows best.
+</h5>
+<br>
+
+<div class="row">
+    <div class="col s6 center-align">
+        <a href="{{ url_for('grocerylist') }}" class="btn-large teal text-shadow">
+            shopping list <i class="fas fa-plus-circle right"></i>
+        </a>
+    </div>
+    <div class="col s6 center-align">
+        <a href="{{ url_for('add_item') }}" class="btn-large teal text-shadow">
+            Add Item <i class="fas fa-plus-circle right"></i>
+        </a>
+    </div>
+
+</div>
 
 
 {% endblock %}
