--- a/templates/register.html
+++ b/templates/register.html
@@ -11,8 +11,8 @@
             <div class="row">
                 <div class="input-field col s12">
                     <i class="fas fa-user-plus prefix teal-text teal-darken-2"></i>
-                    <input id="username" name="username" type="text" minlength="3"
-                    maxlength="9" pattern="^[a-zA-Z0-9]{3,9}$" class="validate" required>
+                    <input id="username" name="username" type="text" minlength="3" maxlength="9"
+                        pattern="^[a-zA-Z0-9]{3,9}$" class="validate" required>
                     <label for="username">Username</label>
                 </div>
             </div>
@@ -20,8 +20,8 @@
             <div class="row">
                 <div class="input-field col s12">
                     <i class="fas fa-user-lock prefix teal-text teal-darken-2"></i>
-                    <input id="password" name="password" type="password"  minlength="3"
-                    maxlength="9" pattern="^[a-zA-Z0-9]{3,9}$" class="validate" required>
+                    <input id="password" name="password" type="password" minlength="3" maxlength="9"
+                        pattern="^[a-zA-Z0-9]{3,9}$" class="validate" required>
                     <label for="password">Password</label>
                 </div>
             </div>
