--- a/templates/grocerylist.html
+++ b/templates/grocerylist.html
@@ -28,7 +28,7 @@
     <div class="row">
         <div class="col s6 center-align">
             <a href="{{ url_for('grocerylist') }}" class="btn-large teal text-shadow">
-                Cancel <i class="fas fa-times-circle right"></i>
+                Clear <i class="fas fa-times-circle right"></i>
             </a>
         </div>
 
