--- a/static/css/style.css
+++ b/static/css/style.css
@@ -26,3 +26,25 @@ h1, h2, h3, h4, h5, p{
 .text-shadow {
     text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5);
 }
+
+.background {
+    background-image: url(https://source.unsplash.com/Q7PclNhVRI0);
+    background-position: bottom;
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 100vh;
+    width: 100%;
+  }
+
+.card-panel{
+    background-color:#E5CDBF;
+
+}
+
+.nav-extended{
+    background-color: #ddc1ae;
+}
+
+
+
+  
