--- a/templates/base.html
+++ b/templates/base.html
@@ -11,14 +11,18 @@
         type="text/css">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}" type="text/css">
     {% block styles %}
+
+<div class="background">
     {% endblock %}
     <title>Your Items</title>
 </head>
 
 <body>
+    
     <header>
+        
         <!--navbar-->
-        <nav class="nav-extended teal lighten-3">
+        <nav class="nav-extended">
             <div class="nav-wrapper">
                 <a href="#!" class="brand-logo">Digital Pantry</a>
                 <a href="#" data-target="mobile-demo" class="sidenav-trigger right"><i class="fad fa-bars"></i></a>
@@ -57,6 +61,10 @@
         </ul>
     </header>
 
+
+
+   
+
     <section>
         <!--what users see when they register. all flash messages-->
         {% with messages = get_flashed_messages() %}
@@ -83,5 +91,6 @@
     {% block scripts %}
     {% endblock %}
 </body>
-
+</div>
+</div>
 </html>
